[package]
name = "tokio-splice"
version = "0.2.2"
authors = ["Hanaasagi <ambiguous404@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Hanaasagi/tokio-splice"
description = """
splice(2) in tokio
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.169"
tokio = { version = "1.43.0", features = ["net"] }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["net", "macros", "rt", "signal", "io-util", "time"] }
